--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,6 @@
-<footer class="container" style="margin-top: 100px">
+<footer class="container" style="margin-top: 100px;">
   <p class="text-center">Copyright ©2017 Rails106
     <br>Design by
-    <a href="http://courses.growthschool.com/courses/rails-101" target=_new>Michael</a>
+    <a href="http://courses.growthschool.com/courses/rails-101/" target=_new>Michael</a>
   </p>
 </footer>
